---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-13
  Features:
    - Added wooden board
  Bugfixes:
    - Unlock unlimited ingredient count for krastorio buildings
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2024-10-10
  Features:
    - Added radioactivity to nuclear items. Only works upon creating a new game.
  Bugfixes:
    - Changed position of steel plate icon
    - Moved krastorio matter-conversion and matter-deconversion recipes to base products item group
    - Removed recipes from barrel recipes that are not supposed to exist (like dark energy in a barrel seems anticlimactic)
    - Fixed barrel tints 
    - Fixed chemistry crafting machine tints
    - Nickel ore is now correctly crushed into crushed nickel ore
    - Some crushing recipes have more than 3 outputs. The krastorio crusher now has 8 output slots.
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2024-10-08
  Features:
    - Update locale for rockets
    - Improved rocket graphics
  Bugfixes:
    - Putting wrong explorer into rocket now results in loosing it
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2024-10-07
  Features:
    - Added locale for en
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2024-10-05
  Features:
    - Changed order of many icons and recipes in inventory and crafting menu
    - Many recipes are now hidden from player
  Bugfixes:
    - Renamed rare metal to rare metals
    - Nanoflex is now unlocked by researching nanobots
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2024-09-29
  Features: